--- a/android-webview-java/settings.gradle
+++ b/android-webview-java/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "android-webview"
+rootProject.name = "android-webview-java"
 include ':app'
