--- a/android-webview-test/settings.gradle
+++ b/android-webview-test/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "android-webview-java"
+rootProject.name = "android-webview-test"
 include ':app'
