--- a/activity-switch-basic/settings.gradle
+++ b/activity-switch-basic/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "switch-activity"
+rootProject.name = "activity-switch-basic"
 include ':app'
